<resources>
    <string name="app_name">connect_odoo_mobile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="txt_name">android</string>
    <string name="txt_email">android@gmail.com</string>
    <string name="img_description">Avatar</string>
    <string name="txt_url">https://android.t4erp.cf</string>
    <string name="txt_add_account">Add account</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_sign_in_url">Your self-hosted URL</string>
    <string name="txt_sign_in_username">Username or email</string>
    <string name="txt_sign_in_password">Password</string>
    <string name="fab_description">FAB</string>
    <string name="txt_no_country_selected">No country selected</string>
    <string name="txt_no_company">No Related Company selected</string>
    <string name="txt_save">Save</string>
    <string name="txt_cancel">Cancel</string>

    <string name="edt_company">Company</string>
    <string name="edt_street">Street</string>
    <string name="edt_street2">Street2</string>
    <string name="edt_zip">Zip</string>
    <string name="edt_country">Country</string>
    <string name="edt_email">Email</string>
    <string name="edt_website">Website</string>
    <string name="edt_phone">Phone</string>
    <string name="edt_mobile">Mobile</string>
    <string name="edt_note">Note</string>
    <string name="chk_is_company">Is Company</string>
    <string name="edt_name">Your Name</string>
    <string name="dialog_choose_picture">Your Choice:</string>
    <string name="dialog_view_picture">View Picture</string>
    <string name="dialog_choose_library">Choose from library</string>
    <string name="dialog_choose_camera">Choose from camera</string>
    <string name="dialog_cancel">Cancel</string>

</resources>