<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    tools:context=".authenticate.SignInActivity">

    <ImageView
        android:id="@+id/imgBanner"
        android:src="@drawable/ic_login_v2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        app:layout_constraintHeight_percent="0.3"
        android:contentDescription="@string/img_description" />

    <EditText
        android:id="@+id/edtHttps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/txt_sign_in_url"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:background="@drawable/bg_edt_corner_8dp"
        android:textColorHint="#78909C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgBanner" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/edtHttps"
        app:layout_constraintEnd_toEndOf="@+id/edtHttps"
        app:layout_constraintTop_toTopOf="@+id/edtHttps" />

    <ImageView
        android:id="@+id/imgCheck"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="10dp"
        android:visibility="invisible"
        android:src="@drawable/ic_baseline_check_25"
        app:layout_constraintBottom_toBottomOf="@+id/edtHttps"
        app:layout_constraintEnd_toEndOf="@+id/edtHttps"
        app:layout_constraintTop_toTopOf="@+id/edtHttps"
        android:contentDescription="@string/img_description" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/txt_sign_in_username"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColorHint="#78909C"
        android:background="@drawable/bg_edt_corner_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtHttps" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/txt_sign_in_password"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:textColorHint="#78909C"
        android:background="@drawable/bg_edt_corner_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtUser" />

    <Spinner
        android:id="@+id/spinDB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:visibility="gone"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_edt_corner_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword" />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:minHeight="48dp"
        android:text="@string/txt_sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinDB"
        app:layout_constraintVertical_bias="0" />

</androidx.constraintlayout.widget.ConstraintLayout>